# ghcjs-perf

./: README.md  default.nix  ghcjs-perf.cabal
src/: ThPerf1.hs  ThPerf2.hs  ThPerf3.hs  ThPerf4.hs  ThPerf5.hs
src-bin/: main.hs
src/ThPerf5/: QQ.hs
