Name: ghcjs-perf
Version: 0.1
Synopsis: ghcjs performance example
Description: ghcjs performance example
License: BSD3
Author: Doug Beardsley
Stability: Experimental
Category: FRP
Build-type: Simple
Cabal-version: >=1.8

library
  hs-source-dirs: src
  build-depends: 
    base,
    ghcjs-dom == 0.1.*,
    mtl,
    raw-strings-qq,
    reflex,
    reflex-dom,
    text
  exposed-modules:
    ThPerf1
    ThPerf2
    ThPerf3
  other-extensions: TemplateHaskell
  ghc-prof-options: -fprof-auto
  ghc-options:  -Wall -fwarn-tabs -funbox-strict-fields -O2

